--- a/_locales/pt_br/messages.json
+++ b/_locales/pt_br/messages.json
@@ -12,16 +12,24 @@
 		"description": "Command (Ctrl+Shift+U): 'Save all tabs'"
 	},
 	"menuSavePage": {
-		"message": "Salvar site com SingleFileZ",
+		"message": "Salvar site via SingleFileZ",
 		"description": "Menu entry: 'Save page with SingleFileZ'"
 	},
 	"menuSaveWithProfile": {
-		"message": "Salvar site com o perfil",
+		"message": "Salvar site com perfil",
 		"description": "Menu entry: 'Save with profile'"
 	},
 	"menuSaveSelectedLinks": {
 		"message": "Salvar links selecionados",
 		"description": "Menu entry: 'Save selected links'"
+	},
+	"menuEditPage": {
+		"message": "Anotar o site...",
+		"description": "Menu entry: 'Annotate the page...'"
+	},
+	"menuEditAndSavePage": {
+		"message": "Anotar e salvar o site...",
+		"description": "Menu entry: 'Annotate and save the page...'"
 	},
 	"menuViewPendingSaves": {
 		"message": "Ver conteúdo pendente...",
@@ -36,7 +44,7 @@
 		"description": "Menu entry: 'Select the profile of the current rule'"
 	},
 	"menuCreateDomainRule": {
-		"message": "Selecione o perfil do domínio atual",
+		"message": "Selecione perfil do domínio atual",
 		"description": "Menu entry: 'Select the profile of the current domain'"
 	},
 	"menuSaveSelection": {
@@ -88,7 +96,7 @@
 		"description": "Menu entry: 'Auto-save' > Auto-save all tabs'"
 	},
 	"buttonDefaultTooltip": {
-		"message": "Salvar site com SingleFileZ",
+		"message": "Salvar site via SingleFileZ",
 		"description": "Button title: 'Save page with SingleFileZ'"
 	},
 	"buttonBlockedBadge": {
@@ -96,7 +104,7 @@
 		"description": "Button badge when the page is blocked: '🚫'"
 	},
 	"buttonBlockedTooltip": {
-		"message": "Este site não pode ser salvo com SingleFileZ",
+		"message": "Este site não pode ser salvo via SingleFileZ",
 		"description": "Button title: 'This page cannot be saved with SingleFileZ'"
 	},
 	"buttonInitializingTooltip": {
@@ -120,11 +128,11 @@
 		"description": "Badge label: 'OK'"
 	},
 	"buttonErrorBadge": {
-		"message": "ERR",
+		"message": "ERRO",
 		"description": "Badge label for unexpected errors"
 	},
 	"buttonAutoSaveActiveTooltip": {
-		"message": "Salvar autom. ativo",
+		"message": "Salvar autom. o ativo",
 		"description": "Button title: 'Auto-save active'"
 	},
 	"buttonAutoSaveActiveBadge": {
@@ -140,7 +148,7 @@
 		"description": "Options sub-title: 'User interface'"
 	},
 	"optionAddMenuEntry": {
-		"message": "adicionar uma entrada no menu de contexto do site",
+		"message": "adicionar uma entrada em menu do contexto do site",
 		"description": "Options page label: 'add entry in the context menu of the webpage'"
 	},
 	"optionDisplayShadow": {
@@ -168,11 +176,11 @@
 		"description": "Options page label: 'include the infobar in the saved page'"
 	},
 	"optionConfirmInfobar": {
-		"message": "abrir um diálogo rápido para editar o conteúdo do infobar",
+		"message": "abrir um diálogo com aviso para editar conteúdo do infobar",
 		"description": "Options page label: 'open a prompt dialog to edit the infobar content'"
 	},
 	"optionAutoClose": {
-		"message": "fechar autom. a aba após o site for salvo",
+		"message": "fechar autom. a aba após site for salvo",
 		"description": "Options page label: 'auto-close the tab after the page is saved'"
 	},
 	"optionsFileNameSubTitle": {
@@ -196,7 +204,7 @@
 		"description": "Options page label: 'characters'"
 	},
 	"optionConfirmFilename": {
-		"message": "abrir o diálogo \"Salvar como\" para confirmar o nome de arquivo",
+		"message": "abrir o diálogo \"Salvar como\" para confirmar nome de arquivo",
 		"description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
 	},
 	"optionFilenameConflictAction": {
@@ -276,7 +284,7 @@
 		"description": "Options page label: 'zoom out the page'"
 	},
 	"optionRemoveAlternativeImages": {
-		"message": "remover imagens para resoluções alternativas da tela",
+		"message": "remover imagens para resoluções alternativas de tela",
 		"description": "Options page label: 'remove images for alternative screen resolutions'"
 	},
 	"optionsFontsSubTitle": {
@@ -292,7 +300,7 @@
 		"description": "Options page label: 'remove alternative fonts'"
 	},
 	"optionsStylesheetsSubTitle": {
-		"message": "Stylesheets",
+		"message": "Folhas de estilo",
 		"description": "Options sub-title: 'Stylesheets'"
 	},
 	"optionCompressCSS": {
@@ -300,7 +308,7 @@
 		"description": "Options page label: 'compress CSS content'"
 	},
 	"optionMoveStylesInHead": {
-		"message": "mover para elemento principal os estilos encontrados fora dele",
+		"message": "mover para elemento head os estilos encontrados fora dele",
 		"description": "Options page label: 'move in the head element the styles found outside of it'"
 	},
 	"optionRemoveUnusedStyles": {
@@ -308,7 +316,7 @@
 		"description": "Options page label: 'remove unused styles'"
 	},
 	"optionRemoveAlternativeMedias": {
-		"message": "remover stylesheets de dispositivos alternativos para telas",
+		"message": "remover folhas de estilo para dispositivos além de telas",
 		"description": "Options page label: 'remove stylesheets for alternative devices to screens'"
 	},
 	"optionsOtherResourcesSubTitle": {
@@ -340,15 +348,15 @@
 		"description": "Options sub-title: 'Auto-save'"
 	},
 	"optionsAutoSettingsSubTitle": {
-		"message": "Regras de auto-configuração",
+		"message": "Regras da configuração aromática",
 		"description": "Options sub-title: 'Auto-settings rules'"
 	},
 	"optionsDeleteDisplayedRulesConfirm": {
-		"message": "Confirmar eliminação de todas regras exibidas",
+		"message": "Confirmar eliminação de todas as regras exibidas",
 		"description": "Popup text 'Confirm the deletion of all displayed rules'"
 	},
 	"optionsDeleteRulesTooltip": {
-		"message": "Eliminar todas regras exibidas",
+		"message": "Eliminar todas as regras exibidas",
 		"description": "Popup text 'Delete all displayed rules'"
 	},
 	"optionsAutoSettingsUrl": {
@@ -420,7 +428,7 @@
 		"description": "Options page label: 'auto-save waiting delay after page load (s)'"
 	},
 	"optionAutoSaveRepeat": {
-		"message": "Salvar autom. regularmente",
+		"message": "Auto-salvar periodicamente",
 		"description": "Options page label: 'auto-save periodically'"
 	},
 	"optionAutoSaveRepeatDelay": {
@@ -488,7 +496,7 @@
 		"description": "Options page label: 'branch name'"
 	},
 	"optionSaveWithCompanion": {
-		"message": "salvar com SingleFileZ Companion",
+		"message": "salvar via SingleFileZ Companion",
 		"description": "Options page label: 'save with SingleFileZ Companion'"
 	},
 	"optionSaveCreatedBookmarks": {
@@ -520,7 +528,7 @@
 		"description": "Options button: 'Reset'"
 	},
 	"optionsResetTooltip": {
-		"message": "Resetar todas opções para valores padrão",
+		"message": "Resetar todas as opções para valores padrão",
 		"description": "Options 'Reset' button tooltip"
 	},
 	"optionsResetConfirm": {
@@ -640,7 +648,7 @@
 		"description": "button 'Add URLs'"
 	},
 	"pendingsAddUrls": {
-		"message": "Digite uma lista de URLs separadas por uma nova linha",
+		"message": "Digite uma lista de URLs, separadas por uma nova linha",
 		"description": "Label of the add URLs input"
 	},
 	"pendingsAddUrlsOKButton": {
