--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -284,7 +284,7 @@
 		"description": "Options page label: 'zoom out the page'"
 	},
 	"optionLoadDeferredImagesDispatchScrollEvent": {
-		"message": "message": "wysyłaj zdarzenie \"scroll\"",
+		"message": "wysyłaj zdarzenie \"scroll\"",
 		"description": "Options page label: 'dispatch \"scroll\" event'"
 	},
 	"optionRemoveAlternativeImages": {
